// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectInput /> with a parsed value 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value="bananas"
>
  <option
    value=""
  >
    Select a value
  </option>
  <option
    value="apple"
  >
    apple
  </option>
  <option
    value="bananas"
  >
    bananas
  </option>
  <option
    value="cranberries"
  >
    cranberries
  </option>
</select>
`;

exports[`<SelectInput /> with a required attribute 1`] = `
<select
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  required={true}
  value=""
>
  <option
    disabled={true}
    value=""
  >
    Select a value
  </option>
</select>
`;

exports[`<SelectInput /> with no props 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    value=""
  >
    Select a value
  </option>
</select>
`;

exports[`<SelectInput /> with options from array of objects w/ parsing props 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    value=""
  >
    Select a value
  </option>
  <option
    value="apple"
  >
    apple
  </option>
  <option
    value="bananas"
  >
    bananas
  </option>
  <option
    value="cranberries"
  >
    cranberries
  </option>
</select>
`;

exports[`<SelectInput /> with options from array of strings 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    value=""
  >
    Select a value
  </option>
  <option
    value="apples"
  >
    apples
  </option>
  <option
    value="bananas"
  >
    bananas
  </option>
  <option
    value="cranberries"
  >
    cranberries
  </option>
</select>
`;

exports[`<SelectInput /> with placeholder option text 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    value=""
  >
    Select one por favor
  </option>
</select>
`;
